style.css
/*
Theme Name: Twenty Eleven
Theme URI: http://wordpress.org/extend/themes/twentyeleven
Author: the WordPress team
Author URI: http://wordpress.org/
Description: The 2011 theme for WordPress is sophisticated, lightweight, and adaptable. Make it yours with a custom menu, header image, and background -- then go further with available theme options for light or dark color scheme, custom link colors, and three layout choices. Twenty Eleven comes equipped with a Showcase page template that transforms your front page into a showcase to show off your best content, widget support galore (sidebar, three footer areas, and a Showcase page widget area), and a custom "Ephemera" widget to display your Aside, Link, Quote, or Status posts. Included are styles for print and for the admin editor, support for featured images (as custom header images on posts and pages and as large images on featured "sticky" posts), and special styles for six different post formats.
Version: 1.1
License: GNU General Public License
License URI: license.txt
Tags: dark, light, white, black, gray, one-column, two-columns, left-sidebar, right-sidebar, fixed-width, flexible-width, custom-background, custom-colors, custom-header, custom-menu, editor-style, featured-image-header, featured-images, full-width-template, microformats, post-formats, rtl-language-support, sticky-post, theme-options, translation-ready
*/
html,body,body div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,figure,footer,header,hgroup,menu,nav,section,time,mark,audio,video{border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent;margin:0;padding:0;}
article,aside,figure,footer,header,hgroup,nav,section{display:block;}
img,object,embed{max-width:100%;}
img.alignright{float: right;}
img.alignleft{float:left;margin-right:10px}
html{overflow-y:scroll;}
blockquote,q{quotes:none;}
blockquote:before,blockquote:after,q:before,q:after{content:none;}
a{font-size:100%;vertical-align:baseline;background:transparent;color:#b17556;text-decoration:none;margin:0;padding:0;}
del{text-decoration:line-through;}
abbr[title],dfn[title]{border-bottom:1px dotted #000;cursor:help;}
table{border-collapse:collapse;border-spacing:0;font-size:inherit;font:100%;}
th{font-weight:700;vertical-align:bottom;}
td{font-weight:400;vertical-align:top;}
hr{display:block;height:1px;border:0;border-top:1px solid #ccc;padding:0;width:95%} 
hr.grid_12{margin-left: 0px;}
input,select{vertical-align:middle;}
pre{white-space:pre-line;word-wrap:break-word;}
input[type="checkbox"]{vertical-align:baseline;}
select,input,textarea{font:99% sans-serif;}
a:hover,a:active{outline:none;}
small{font-size:85%;}
td,td img{vertical-align:top;}
sub,sup{font-size:75%;line-height:0;position:relative;}
sup{top:-.5em;}
sub{bottom:-.25em;}
pre,code,kbd,samp{font-family:monospace, sans-serif;}
.clickable,label,input[type=button],input[type=submit],button{cursor:pointer;}
button,input,select,textarea{margin:0;}
button{width:auto;overflow:visible;}
.ie7 img{-ms-interpolation-mode:bicubic;}
.ie6 html{filter:expression(document.execCommand("BackgroundImageCache",false,true));}
.clearfix:before,.clearfix:after{content:"\0020";display:block;height:0;overflow:hidden;}
.clearfix:after{clear:both;}
.clearfix{zoom:1;}
body{font:14px "Droid Serif", serif;background-image:url(images/bg.jpg);-webkit-background-size:100%;-moz-background-size:100%;background-size:100%;}
body p{margin:15px;}
@font-face{font-family:'Droid Bold';src:url(/fonts/DroidSerif-Bold.eot?) format(eot), url(/fonts/DroidSerif-Bold.woff) format(woff), url(/fonts/DroidSerif-Bold.ttf) format(truetype);}
body,select,input,textarea{color:#333;}
a:hover{color:#b17556;text-decoration:underline;}
a:link{-webkit-tap-highlight-color:#fcd700;}
ins{background-color:#fcd700;color:#000;text-decoration:none;}
mark{background-color:#fcd700;color:#000;font-style:italic;font-weight:700;}
.wrapper{background-image:url(images/paint.jpg);background-repeat:no-repeat;background-position:top right;background-color:#FFF;-webkit-box-shadow:0 0 30px #999;-moz-box-shadow:0 0 30px #999;box-shadow:0 0 30px #999;}
.nav{z-index:1000;background:url(images/navbar.png);background-position:right;overflow:hidden;background-repeat:no-repeat;font:14px "Droid Serif", serif;padding:10px 0;}
.nav ul{list-style-type:none;list-style-image:none;}
.nav li a{text-decoration:none;color:#4a4848;text-transform:uppercase;}
.nav li a:hover{color:#b27557;}
header {margin-bottom:20px;}
.flexslider{border:none;}
.flexbuttons{background-image:url(images/slidersidebar.jpg);}
.flex-control-nav{width:50px;position:relative;}
.flexbuttons li{padding-bottom:25px;}
.description{padding-top:15px;}
.menu{float:right;}
.post{line-height:160%;}
#content hr{border-bottom:2px solid #ccc;border-top:none;}
.entry-title a{font-size:30px;color:#333;text-decoration:none;font-weight:100;}
.entry-meta{font-size:11pt;color:#999;font-weight:100;font-style:italic;}
.entry div ul li {list-style-type: disc;color:#666 ;list-style-position: outside;font-size:14px;margin-left:50px;margin-right:10px;}
.sidebar{background:url(images/slidersidebar.jpg);overflow:hidden;background-repeat:repeat;padding:10px 0;}
.sidebar ul{line-height:180%;padding:10px;}
.sidebar h2{font-style:italic;color:#535253;font-weight:400;font-size:20px;border-bottom:1px dotted #898989;margin-left:10px;margin-right:10px;margin-top:10px;text-shadow:1px 2px 3px #fff;padding:3px 5px;}
.sidebar h2:first-of-type{margin-top:none;}
.sidebar p{font-size:11pt;color:#666;font-weight:100;font-style:italic;text-indent:0;}
.sidebar a{text-decoration:none;color:#b17556;}
.sidebar a:hover{color:#00d9ab;text-decoration:none;-webkit-transition:all .3s ease-out;-moz-transition:all .3s ease-out;-ms-transition:all .3s ease-out;-o-transition:all .3s ease-out;transition:all .3s ease-out;}
.sidebar img{display:block;margin:10px auto;max-width:95%}
#twitter{margin:10px;}
#twitter p{font-style:normal;font-size:10pt;}
.comments{color:#b17556;}
ol.commentlist li.comment{border-bottom:1px dotted #666;padding:10px;}
ol.commentlist li.comment div.vcard cite.fn{font-style:normal;}
ol.commentlist li.comment div.vcard img.avatar{float:right;margin:0 0 10px 10px;}
ol.commentlist li.comment div.comment-meta{font-size:10px;}
ol.commentlist li.comment div.comment-meta a{color:#ccc;}
ol.commentlist li.comment div.reply{font-size:11px;}
ol.commentlist li.comment ul.children{list-style:none;margin:10px 0 0;}
ol.commentlist li.comment ul.children li.depth-2{border-left:5px solid #555;margin:0 0 10px 10px;}
ol.commentlist li.comment ul.children li.depth-3{border-left:5px solid #999;margin:0 0 10px 10px;}
ol.commentlist li.comment ul.children li.depth-4{border-left:5px solid #bbb;margin:0 0 10px 10px;}
ol.commentlist li.even{background:#fff;}
ol.commentlist li.odd{background:#f6f6f6;}
ol.commentlist li.parent{border-left:5px solid #111;}
#content h1{text-align:center;font-size:30px;font-weight:100;margin-bottom:15px;}
#content img{}
img.flat{-webkit-box-shadow:none; -moz-box-shadow: none; box-shadow:none;}
#note{background-image: url(http://sseko.welovewebsit.es/wp-content/themes/Sseko/images/paper.png);
background-repeat: no-repeat;!important}
a.inlineimg {float:right;}
#post-298 h2{font-style:italic;;font-weight:100;color:#333;font-size:14px;margin-bottom:10px}
.page-id-12 .sidebar{display:none;}
#note{padding: 0 0px 50px 0px;}
div#note img{box-shadow: 0 0 0px #FFF;}
.post img{max-width:95%}
.post h2{font-style:italic;font-weight:100;color:#333;font-size:24px;padding-bottom:10px}
.post h3{ color: #8c8c8c;font-weight:100;font-variant:small-caps;font-style:italic;font-size:18px}
.post ul li{list-style-type:disc;list-style-position:inside;margin:15px;}
.lightbox{-webkit-border-radius:12px;-moz-border-radius:12px;border-radius:12px;-moz-background-clip:padding;-webkit-background-clip:padding-box;background-clip:padding-box;border:3px solid #ccc;background-color:#FFF;padding:10px;}
.lightbox li{font-size:16px;max-width:700px;margin-bottom:30px;}
.lightbox img{border:1px dotted #666;display:inline;float:left;}
.lightbox ul{margin-top:20px;}
.lightbox li strong{margin-right:10px;}
.lightbox h1{text-align:center;font-size:30pt;font-weight:400;border-bottom:1px dotted #666;}
.lightbox h3{text-align:center;font-size:20pt;font-weight:400;}
.lightbox hr{width:35%;border-bottom:1px dotted #666;border-top:0;}
ul,ol.commentlist{list-style:none;}
input[type="radio"],.ie6 input{vertical-align:text-bottom;}
strong,th,.nav .current_page_item,ol.commentlist li.comment div.reply a{font-weight:700;}
.sub-menu .current_page_item{font-weight:400;}
::-moz-selection,::selection{background:#fcd700;color:#fff;text-shadow:none;}
.nav li,.social li{display:inline;padding:2px;}
.flexbuttons li a,li.font{font:22px "Droid Serif Italic", serif;color:#b27557;text-decoration:none;font-style:italic;}
.mini,.social ul{text-align:center;margin-top: 20px;}
.entry-meta a,.comments a{text-decoration:none;color:#b17556;text-transform:uppercase;}
.menu-main-nav-container { clear: both; min-height: 54px; }
.sub-menu { list-style-type:none; display: none; position: absolute;border-top: 1px solid #b27557;border-bottom: 1px solid #b27557;}
ul.sub-menu{padding-top:5px;padding-bottom:5px;margin-top:17px;}
#description{margin-top:20px;}
.special{font-style:italic;font-weight:bold;}
#text-3 div.textwidget a.button {text-align: center;display:block;}
#post-709 div.entry p, #post-427 div.entry p{text-indent:0px;margin: 0px;max-width:100%;}  
#post-709 div.entry h3{margin:15px 0px 5px 0px;}
#post-709 div.entry ul h3{margin:0px 0px 5px 0px}
#post-709 div.entry ul li a{margin-left:10px;list-style-type:none;}
.twitter-follow-button{padding-top:20px}
#recommend{padding-top:15px}

